--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "node-nlp": "^4.27.0",
     "remove-accents": "^0.4.4"
   },
   "devDependencies": {
